--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
+    "moment": "^2.28.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^3.0.8",
     "vuelidate": "^0.7.5",
